// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextEntry Rich text Basic copy + paste 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    Copy + pasting?
  </span>
</p>
`;

exports[`TextEntry Rich text Basic copy + paste 2`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    Copy + pasting?
  </span>
</p>
`;

exports[`TextEntry Rich text Basic copy + paste 3`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    Copy + pasting?
  </span>
</p>
`;

exports[`TextEntry Rich text Basic copy + paste 4`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    Copy + pasting?
  </span>
</p>
`;

exports[`TextEntry Rich text Can delete characters after they're typed 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    Delete some of these characte
  </span>
</p>
`;

exports[`TextEntry Rich text Can type 'Hello Outline' in the editor 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    Hello Outline
  </span>
</p>
`;

exports[`TextEntry Rich text Empty paragraph and new line node selection 1`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
</p>
`;

exports[`TextEntry Rich text Empty paragraph and new line node selection 2`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
</p>
`;

exports[`TextEntry Rich text Empty paragraph and new line node selection 3`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
</p>
`;

exports[`TextEntry Rich text Empty paragraph and new line node selection 4`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
</p>
`;

exports[`TextEntry Rich text Empty paragraph and new line node selection 5`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
</p>
`;

exports[`TextEntry Rich text Empty paragraph and new line node selection 6`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
  <br />
  <span>
    ﻿
  </span>
</p>
`;

exports[`TextEntry Rich text Empty paragraph and new line node selection 7`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
  <br />
  <span>
    ﻿
  </span>
</p>
`;

exports[`TextEntry Rich text Empty paragraph and new line node selection 8`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
</p>
`;

exports[`TextEntry Rich text Paragraphed text entry and selection 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    Hello World.
  </span>
</p>
`;
